--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "@app: rootDir": "src",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
