--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "@app: rootDir": "src",
+  "homepage": "/thiep-moi-cuoi",
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
