feat: Introduce animated header component, global styles, Open Graph metadata, and a new image asset.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "@app: rootDir": "src",
   "homepage": "/thiep-moi-cuoi",
   "scripts": {
-    "dev": "vite --host",
+    "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
